--- a/sass/home/_home.scss
+++ b/sass/home/_home.scss
@@ -2,3 +2,5 @@
 @import "../components/banner";
 @import "../components/layout";
 @import "../components/recent_work";
+@import "../components/watch";
+@import "../components/asNavfor";
