--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -66,8 +66,11 @@
                 box-shadow: inset 0 0 5px 4px rgba(255,255,255,.2),8px 8px 16px rgba(100,100,100,.1),  -8px -8px 16px rgba(255,255,255,.6);
             }
             .banner_p{
-                font-size: 20px;
-                color:$white;
+                text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+                font-size: 16px;
+                font-weight: 700;
+                color: #000000;
+                letter-spacing: 5px;
             }
         }
     }
